Evaluation almost done
TEEEEEEEEEEEEEEEEEXT!

--- a/ArticleContent.tex
+++ b/ArticleContent.tex
@@ -16,3 +16,37 @@
 \section{Danfoss fastholder stabil forretning - w/o Stop Words}
 \label{Lemvig1:textFiltered}
 Termostatkæmpen Danfoss holder indtjeningsniveau, omsætningen falder smule. 	Ingen dramaer Danfoss. 	Det overskriften selskabets regnskab årets måneder. Omsætningen falder smule 25.528 mio. kroner 25.985 mio. kroner år, indtjeningen lander 2.938 mio. kroner 2.952 mio. kroner år. 	Med stabil forretning overraskelser, koncernchef Niels B. Christiansen tilfreds med. 	Takket strategiske fokus kerneforretning opveje kollapset solcellemarked faldende valutakurser. Det tilfredsstillende, formået tilpasse levere stærkt trods generelt markedsvækst, han. 	Selskabet anfører samtidig, korrigeret valutaeffekt Danfoss' samlede omsætning års niveau. 	Det europæiske solcellekollaps ellers ramt Danfoss hårdt, selskabet producerer invertere solcelleanlæg. Og solcellemarkedet blandt årsager til, Danfoss måneder skar fyrede 69 medarbejdere Danmark. 	Den største vækst oplever Danfoss Rusland Brasilien, kinesiske følger lavere tempo. Generelt forventer selskabet dog, globale præget vækst endnu. Og åbner opkøb udover seneste køb Danfoss Turbocor aktier Sauer-Danfoss. 	Derfor kigger på, styrke forretningen gennem fokus markeder opkøb - såvel teknologier virksomheder. Vi styrken finansiere sådanne opkøb. Det giver handlefrihed forbedre Danfoss' position yderligere, forklarer Niels B. Christiansen. 	For året venter Danfoss »beskeden vækst« omsætning indtjening. 	Danfoss' koncernchef Niels B. Christiansen venter beskeden vækst år. 
+
+\section{BRIDGE: Cavendish \#1}
+\label{JPPOLHighestMatch1}
+Cavendish-turneringen i Monaco blev vundet af det bulgarske par Gunev — Nanev foran Martens — Filipowicz og Helness — Helgemo. Forhåbentlig havde Gunev og Nanev købt en del af sig selv, for der var 185.000 Euro til den, der havde købt vinderne. Ingen af de danske par kvalificerede sig til A-finalen. I dette spil var Øst lidt for grådig: Ø. Ingen Lars Blakset — Martin Schaltz var Nord-Syd mod Frederik Wrang — Juan Carlos Ventin, og Vests 3 Kl var svagt med begge minor. Efter Nords 3 Sp foreslog Syd 4 Hj, som Nord flyttede til 4 Sp, der blev doblet af Øst. Det fortrød han lidt senere, for det hjalp spilfører til at finde den vindende spilleplan. Der kom klør ud til esset og skift til Ru E fulgt af Ru D, som Syd trumfede. Martin Schaltz spillede spar til kongen, indkasserede fire hjerterstik, tog Kl K og trumfede Kl B. Med tre kort tilbage spillede Syd Sp 9 fra bordet, hvor Øst brugte bonden, men Syd faldt fra og havde gaffel på E10 over D8 — ti stik. bridge@jppol.dk
+
+\section{BRIDGE: Cavendish \#2}
+\label{JPPOLHighstMatch2}
+Cavendish-turneringen i Monaco blev vundet af det bulgarske par Gunev - Nanev foran Martens - Filipowicz og Helness - Helgemo. Forhåbentlig havde Gunev og Nanev købt en del af sig selv, for der var 185.000 Euro til den, der havde købt vinderne. Ingen af de danske par kvalificerede sig til A-finalen. I dette spil var Øst lidt for grådig: Ø. Ingen Lars Blakset - Martin Schaltz var Nord-Syd mod Frederik Wrang - Juan Carlos Ventin, og Vests 3 Kl var svagt med begge minor. Efter Nords 3 Sp foreslog Syd 4 Hj, som Nord flyttede til 4 Sp, der blev doblet af Øst. Det fortrød han lidt senere, for det hjalp spilfører til at finde den vindende spilleplan. Der kom klør ud til esset og skift til Ru E fulgt af Ru D, som Syd trumfede.Martin Schaltz spillede spar til kongen, indkasserede fire hjerterstik, tog Kl K og trumfede Kl B. Med tre kort tilbage spillede Syd Sp 9 fra bordet, hvor Øst brugte bonden, men Syd faldt fra og havde gaffel på E10 over D8 - ti stik.
+
+\section{SKAK: Mr. Karpov \#1}
+\label{JPPOLSencondHighestMatch1}
+Eksverdensmester Anatolij Karpov er fyldt 62 år, men han kan stadig spille godt skak, når inspirationen indfinder sig. Det gør den i hurtigskakturneringen i Cap D'Agde, som de to seneste år har båret hans navn: Le trophee Anatoly Karpov. I den indledende runde er Karpov sprudlende og fører overlegent med 8,5 af 10. Her positionel skak som fra storhedstiden: Hvids tur - find planen Sådan skal man bare ikke stå mod Mr. Karpov. Resten er instruktivt. A. Karpov Y. Pelletier 1. d4 Sf6 2. c4 e6 3. Sc3 Lb4 4. Dc2 00 5. e4 d5 6. e5 Se4 7. a3 Lxc3? 8. bxc3 c5 9. Ld3 Da5 10. Se2 cxd4 11. cxd5 exd5 12. f3 Sxc3 13. Sxd4 Sb5??! 14. Ld2 Sxd4 15. Lxh7+ Kh8 16. Lxa5 Sxc2? 17. Lxc2 Sc6 18. Lb4 Sxb4 19. axb4 f6 20. exf6 Txf6 21. Kd2 Ld7 22. The1 a6 23. Te7 Td8 24. Tae1 Kg8 Diagramstillingen. 25. h4! For at pacificere sort med h4-h5 og Lg6 25... Kf8 26. h5 Le8 27. Txb7 Lxh5 28. Th1! Th6 29. g4 Le8 30. Txh6 gxh6 31. Tb6 Kg7 32. Ld3! Td7 33. Lxa6 Tf7 34. Tb7! Ld7 35. b5 Kf6 36. b6 Ke6 37. Lb5! 1- 0 SUNE BERG HANSEN skak@jppol. dk
+
+\section{SKAK: Mr. Karpov \#2}
+\label{JPPOLSencondHighestMatch2}
+Eksverdensmester Anatolij Karpov er fyldt 62 år, men han kan stadig spille godt skak, når inspirationen indfinder sig. Det gør den i hurtigskakturneringen i Cap D'Agde, som de to seneste år har båret hans navn: Le trophee Anatoly Karpov. I den indledende runde er Karpov sprudlende og fører overlegent med 8,5 af 10. Her positionel skak som fra storhedstiden: Hvids tur — find planen Sådan skal man bare ikke stå mod Mr. Karpov. Resten er instruktivt. A. Karpov - Y. Pelletier 1. d4 Sf6 2. c4 e6 3. Sc3 Lb4 4. Dc2 0- 0 5. e4 d5 6. e5 Se4 7. a3 Lxc3? 8. bxc3 c5 9. Ld3 Da5 10. Se2 cxd4 11. cxd5 exd5 12. f3 Sxc3 13. Sxd4 Sb5??! 14. Ld2 Sxd4 15. Lxh7+ Kh8 16. Lxa5 Sxc2? 17. Lxc2 Sc6 18. Lb4 Sxb4 19. axb4 f6 20. exf6 Txf6 21. Kd2 Ld7 22. The1 a6 23. Te7 Td8 24. Tae1 Kg8 Diagramstillingen. 25. h4! For at pacificere sort med h4-h5 og Lg6 25... Kf8 26. h5 Le8 27. Txb7 Lxh5 28. Th1! Th6 29. g4 Le8 30. Txh6 gxh6 31. Tb6 Kg7 32. Ld3! Td7 33. Lxa6 Tf7 34. Tb7! Ld7 35. b5 Kf6 36. b6 Ke6 37. Lb5! 1— 0. skak@jppol.dk
+
+\section{Dværgen der voksede og blev en kæmpe}
+\label{JPPOLSameContent1}
+50 I DAG. Carlos Caetano Bledorn Verri er det fulde navn - men de er ikke pjattede med lange remser i brasiliansk fodbold, så fødselaren er bedre kendt som ' Dunga'. Navnet er den brasilianske udgave af Dopey ( Dumpe), en af dværgene fra Disneys version af Snehvide-eventyret, og det var en onkel, der leverede kælenavnet, fordi drengen længe var meget lille af vækst. Det blev lidt bedre med højden senere, men navnet blev hængende, og det samme gjorde en glæde ved fodbold. Det i en grad, så Dunga nåede helt til tops på den internationale scene. 91 gange optrådte Dunga som spiller for Brasilien, men kritikere i hjemlandet - nogle vil kalde dem naive fodboldromantikere - henviser til årene 1987-1998 som den kedelige ' Dunga-æra', hvor resultaterne blev skabt på bekostning af den kreative og mere underholdende udgave af spillet. Men Dunga blev verdensberømt, da han som holdets anfører var med til at gøre Brasilien til verdensmester i 1994 i USA. Dunga har italiensktysk baggrund længere tilbage i familien, og måske er det netop den taktisk velfunderede indstilling til spillet, som Italien og Tyskland er kendt for, der skabte den yderst effektive og skudstærke, defensive midtbanestyrmand Dunga. I ham havde holdkammeraterne en meget tydelig leder på banen, og hvis de ikke rettede ind, kunne han blive rigtig vred, som da han f. eks. kom i slagsmål med Bebeto under VM i 1998 og holdkammeraterne måtte lægge sig imellem. Efter syv sæsoner i brasilianske klubber optrådte Dunga seks sæsoner i Italien ( selvfølgelig), hvorefter hans aktive karriere blev afrundet med kortere perioder i Tyskland ( selvfølgelig), Japan og til sidst hans første klub i karrieren, Internacional, hjemme i Porto Alegre. Her er han i dag cheftræner, men fra 2006-2010 var han uden forudgående international trænererfaring havnet i den lune stol som landstræner for Brasilien. Dunga gjorde det egentlig godt, men blev fyret, da holdet tabte VM-kvartfinalen i Sydafrika for tre år siden til Holland. Inden da havde han med holdet erobret Copa América ( 2007) og Confederations Cup ( 2009). Men det er sjældent nok i Brasilien.
+
+\section{50 ÅR I DAG: Den uortodokse brasilianer}
+\label{JPPOLSameContent2}
+Dunga oplevede sin aktive karrieres højdepunkt, da han som anfører for Brasilien løftede VM-trofæet i 1994 efter finalesejr over Italien. I den afgørende straffesparkskonkurrence scorede Dunga selv sit holds sidste mål, og spillede dermed en væsentlig rolle, da Brasilien blev verdensmestre for første gang i 24 år. Dunga var ellers langt fra billedet på den typiske brasilianske fodboldstjerne. Han blev egentligt døbt Carlos Caetano Bledorn Verri, men fik som lille kælenavnet "Dunga" efter det portugisiske navn på dværgen Dumpe fra Disneys "Snehvide". Som spiller var han kendt for sit utrættelige arbejde i midtbanens motorrum, og han overlod de offensive lækkerier til landsmænd som Romario og Ronaldo. På de dyder opnåede han 91 landskampe for Brasilien, og som den første spiller i historien kunne han skrive finaler ved VM, OL, Confederations Cup og de kontinentale mesterskaber på sit cv. Karrieren på klubplan var mere beskeden, og her huskes Dunga bedst for sine år i italienske Fiorentina og tyske VfB Stuttgart. Seks år efter spillerkarrierens afslutning blev Dunga i 2006 udnævnt til landstræner for Brasilien. Beslutningen siger en del om Dungas status i hjemlandet, idet han ikke havde tidligere erfaring med trænergerningen. Alligevel kom den tidligere midtbanekriger godt fra start i sit nye job, og han vandt de sydamerikanske mesterskaber, Copa América, med sit land i 2007. I 2010 røg Brasilien imidlertid ud i kvartfinalen ved VM i Sydafrika, og fiaskoen udløste kritik fra fodboldikonet Pelé, såvel som en fyreseddel fra det brasilianske fodboldforbund. Siden har Dunga trænet sin ungdomsklub Internacional, men blev fyret fra klubben tidligere på måneden. jesper.jakobsen@jp.dk 
+
+\section{Forskningsaftale til 859 millioner kroner er på plads \#1}
+\label{JVFLMatch1}
+Der skal bruges i alt 859 millioner kroner på forskningsinitiativer og til Danmarks nye store innovationsfond næste år. Det har regeringen indgået to brede aftaler omkring torsdag aften, oplyser Ministeriet for forskning, innovation og videregående uddannelser. Forskningsminister Morten Østergaard (R) vil uddybe aftalen nærmere klokken 20.
+
+\section{Forskningsaftale til 859 millioner kroner er på plads \#2}
+\label{JVFLMatch2}
+Der skal bruges i alt 859 millioner kroner på forskningsinitiativer og til Danmarks nye store innovationsfond næste år. Det har regeringen indgået to brede aftaler omkring torsdag aften, oplyser Minis... Der skal bruges i alt 859 millioner kroner på forskningsinitiativer og til Danmarks nye store innovationsfond næste år. Det har regeringen indgået to brede aftaler omkring torsdag aften, oplyser Ministeriet for forskning, innovation og videregående uddannelser. Det har regeringen indgået to brede aftaler omkring torsdag aften, oplyser Ministeriet for forskning, innovation og videregående uddannelser. Forskningsminister Morten Østergaard (R) vil uddybe aftalen nærmere klokken 20.
+
+
