--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -32,7 +32,7 @@ When looking at article matching, there is also the possibility of having articl
 Of course two articles could describe the same topic, but never have been related to begin with. I will not try and dissect whether this is the case, only try and indicate when I find two articles that are dealing with the same topic, and mark them as such. 
 
 \subsection{Copyright}
-It is hard to talking about duplicating without talking about copyrights. Although this thesis will not delve into whether something is duplicated as a part of a copyright infringement, it seems only reasonable to give a moment to talk about what a copyright is, and how it would affect duplication.
+It is hard to talk about article duplicating without talking about copyrights. Although this thesis will not delve into whether something is duplicated as a part of a copyright infringement or not, it seems only reasonable to give pause for a moment to talk about what a copyright is, and how it would affect duplication.
 
 I feel that this quote is fulfilling as to explaining the concept of \textit{'copyright'}, even if it is talking about a case that is ongoing in USA at the time, and copyright rules can vary from nation to nation.
 \begin{quote}
