--- a/EvaluationAppendix.tex
+++ b/EvaluationAppendix.tex
@@ -4,5 +4,20 @@ This contains the diagrams used in the Evaluation chapter.
 \begin{sidewaysfigure}
 	\centering
 	\includegraphics[scale=0.45]{figures/JPPOLScoreGraph}
+	\caption{Column chart showing the article comparison scores, for all comparisons made from the JP and POL sources that has a Cosine score above 0.3}
 	\label{D1}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}
+	\centering
+	\includegraphics[scale=0.5]{figures/e410559e}
+	\caption{LCS plot of article comparison.}
+	\label{D2}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}
+	\centering
+	\includegraphics[scale=0.45]{figures/JV-LemvigScoreGraph}
+	\caption{Column chart showing the comparison scores for the JV and FL sources, including all comparisons that scored 0.3 or higher in the Cosine score.}
+	\label{D3}
 \end{sidewaysfigure}
