Final word written...

--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -38,6 +38,7 @@ The essential thing in this, is to ensure that the various algorithms works in d
 	\centering
 	\includegraphics[scale=0.3]{figures/MultipleAlgoScores}
 	\caption{\textbf{Left:} A balanced score, obtained by using several algorithm with different focus areas. \textbf{Right:} An unbalanced score, obtained by using several algorithms with the same focus area\cite{Slides}.}
+	\label{MultipleAlgo}
 \end{figure}
 
 The idea is that the algorithms should do 99.9\% of the work in identifying article duplicates, and then have the  last 0.1\% be verified by humans. This is already how things are working at Infomedia, but only with one algorithm at the moment. My work will the be the first algorithm to do a check of the work done by the already implemented algorithm. This will hopefully narrow the field of possible article duplicates that has to be verified by human eyes.
