--- a/ChapterIntroduction.tex
+++ b/ChapterIntroduction.tex
@@ -13,7 +13,7 @@ Another issue, is the issue of copyrights and when the same article will appear 
 
 \section{Thesis Statement}
 
-I will in this thesis try and look into various ways of identifying article duplicates (or articles that have a lot of text in common) within a test corpus\footnote{A days worth of articles from 10/31/2013 - totalling 22.787 articles.} of articles, by using algorithms. The long term goal for Infomedia is having this being implemented in the inflow of articles, and having a look back functionality so that we can group duplicates not just for one day, but for a longer period of time.
+In this thesis we will try and look into various ways of identifying article duplicates (or articles that have a lot of text in common) within a test corpus\footnote{A days worth of articles from 10/31/2013 - totalling 22.787 articles.} of articles, by using algorithms. The long term goal for Infomedia is having this being implemented in the inflow of articles, and having a look back functionality so that we can group duplicates not just for one day, but for a longer period of time. Is it possible to get a "better" result set from using a combination of algorithms to find article duplicates and can we perhaps do more than "just" finding duplicates?
 
 \section{Limitation}
 Due to the time constraints, this will be done as prototype. I will show through testing how the algorithms works, and analyse their results. These results will then be evaluated and I will comment on these findings.
