--- a/Thesis.tex
+++ b/Thesis.tex
@@ -89,11 +89,14 @@
 %-------------
 \mainmatter
 \include{ChapterIntroduction}						%Chapter Introduction                             
-\include{Chapter2} 									%Chapter 2
-\include{Chapter3}                               	%Chapter 3
+\include{Chapter2} 									%Chapter 2	General stuff
+\include{Chapter3}                               	%Chapter 3	Analysis
 \include{Implementation}							%Chapter 4, Implementation
 \include{Test}										%Chapter 5, Test
 \include{Evaluation}								%Chapter 6, Evaluation
+\include{Discussion}								%Chapter 7, Discussion of the project
+\include{FutureImplementation}						%Chapter 8, Discussion of how the system should be implemented
+\include{Conclusion}								%Chapter 9, Conslusion
 \appendix	
 \include{Appendix1}                                 %Appendix A
 \include{ArticleContent}							%Appendix containing article text
