--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -1,14 +1,11 @@
 \chapter{Test Diagrams}
 
-This appendix is full of stuff ... add more
-
 Document from Infomedia about the general Vector Spaced Search.\\
 Thesis document from Inge\\
-Links to Wikipedia\\
 The algorithm course book..\\
 Example XML document (article) - to show what the XML documents look like.
 
-An example of comparing two articles with LCS.
+Examples of comparing two articles with LCS.
 
 \begin{sidewaysfigure}
 	\includegraphics[scale=0.65]{figures/LcsExample}
