--- a/FutureImplementation.tex
+++ b/FutureImplementation.tex
@@ -5,4 +5,6 @@ We should make sure that the algorithms implemented have various focus areas, so
 
 A lot of effort should also go into the preparation phase, where text is being normalized. We saw several examples of text normalization giving an inaccurate result, albeit only minor inaccuracies. However this error source might as well be eliminated to help get as an accurate score as possible.
 
+Another thing to consider is the cost. A lot of time and manpower could be sunk into a task that would provide little value. There is a need to weigh cost and benefits for all extra implementation, but this is a talk for another time.
+
 And finally a lot of testing of the score evaluation should be made. This part could end up being a total different method than what is currently is, by having many algorithms doing their separate scoring, but a lot of testing of this is still needed.
